name:                free-vl
version:             0.1.0.0
synopsis:            van Laarhoven encoded Free Monad with Extensible Effects
description:         Please see README.md
homepage:            http://github.com/aaronlevin/free-vl
license:             BSD3
license-file:        LICENSE
author:              Aaron Levin
maintainer:          Aaron Levin <aaron.michael.benjamin.levin@gmail.com>
copyright:           2016 Aaron Levin
category:            Control, Monads
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Free.VanLaarhoven
                     , Control.Monad.Free.VanLaarhovenE
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:  CPP

executable examples
  hs-source-dirs:      examples
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , free-vl
  default-language:    Haskell2010

test-suite free-vl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , free-vl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aaronlevin/free-vl
